--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "types": ["vite/client"],
         "allowJs": true,
         "skipLibCheck": false,
-        "esModuleInterop": false,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
