--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
         "resolveJsonModule": true,
         "isolatedModules": false,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "typeRoots": ["node_modules/@types", "src/types"]
     },
     "include": ["./src", "*.ts", "*.tsx"],
     "exclude": ["node_modules", ".vscode"],
